<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="@dimen/fab_margin">




    <TextView
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:text="@string/main_act_tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="main_act_bt1_click"
        android:text="@string/main_act_bt1_click" />
        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="main_act_bt2_click"
            android:text="@string/main_act_bt2_click" />

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="main_act_lib_source_click"
            android:text="@string/main_act_lib_source" />

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="main_act_javadocs_click"
            android:text="@string/main_act_javadocs" />

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="main_act_app_source_click"
            android:text="@string/main_act_app_source" />

    </LinearLayout>

</RelativeLayout>
