<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyPostExceptionActivity"
    android:padding="@dimen/fab_margin">







<ScrollView
    android:layout_alignParentTop="true"
    android:layout_above="@+id/post_act_bottom_ll"
    android:id="@+id/post_act_scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:padding="@dimen/fab_margin"
            android:layout_gravity="center_horizontal"
            android:id="@+id/post_act_iv"
            android:layout_width="100dp"
            android:layout_height="100dp" />

    <TextView
        android:text="@string/post_act_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
<View
    android:layout_marginTop="@dimen/fab_margin"
    android:layout_width="match_parent"
    android:layout_height="2dp"
    android:background="@color/colorPrimaryDark"/>



    </LinearLayout>
</ScrollView>

    <LinearLayout
        android:id="@+id/post_act_bottom_ll"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="post_act_see_log"
            android:text="@string/post_act_see_logs" />


        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="post_act_send_email"
            android:text="@string/post_act_send_email" />
        <TextView
            android:textAlignment="center"
            android:textSize="14sp"
            android:text="@string/post_act_email_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="post_act_finish"
            android:text="@string/post_act_finish" />


    </LinearLayout>

</RelativeLayout>